Fix bugs and update code