@@ -3,51 +3,86 @@ package com.pms.pmsfororg.service;
 import com.pms.pmsfororg.dto.CitizenRequestDTO;
 import com.pms.pmsfororg.dto.CitizenResponseDTO;
 import com.pms.pmsfororg.entity.Citizen;
+import com.pms.pmsfororg.entity.Ward;
+import com.pms.pmsfororg.exception.ResourceNotFoundException;
 import com.pms.pmsfororg.mapper.CitizenMapper;
 import com.pms.pmsfororg.repository.CitizenRepository;
+import com.pms.pmsfororg.repository.WardRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CitizenService {
 
     private final CitizenRepository citizenRepository;
+    private final WardRepository wardRepository;
 
-    public CitizenService(CitizenRepository citizenRepository) {
+    public CitizenService(CitizenRepository citizenRepository,
+                          WardRepository wardRepository) {
         this.citizenRepository = citizenRepository;
+        this.wardRepository = wardRepository;
     }
 
-    public CitizenResponseDTO createCitizen(CitizenRequestDTO dto) {
+    public CitizenResponseDTO create(CitizenRequestDTO dto) {
+
+        Ward ward = wardRepository.findById(dto.getWardId())
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Ward Not Found"));
 
         Citizen citizen = CitizenMapper.toEntity(dto);
+        citizen.setWard(ward);
 
-        Citizen savedCitizen = citizenRepository.save(citizen);
-
-        return CitizenMapper.toDTO(savedCitizen);
+        return CitizenMapper.toDTO(citizenRepository.save(citizen));
     }
 
-    public List<CitizenResponseDTO> getAllCitizens() {
+    public List<CitizenResponseDTO> getAll() {
 
         return citizenRepository.findAll()
                 .stream()
                 .map(CitizenMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public CitizenResponseDTO getCitizenById(Long id) {
+    public CitizenResponseDTO getById(Long id) {
 
         Citizen citizen = citizenRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Citizen Not Found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Citizen Not Found"));
 
         return CitizenMapper.toDTO(citizen);
     }
 
-    public CitizenResponseDTO updateCitizen(Long id, CitizenRequestDTO dto) {
+    public CitizenResponseDTO getByEmail(String email) {
+
+        Citizen citizen = citizenRepository.findByEmail(email)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Citizen Not Found"));
+
+        return CitizenMapper.toDTO(citizen);
+    }
+
+    public List<CitizenResponseDTO> getByWard(Long wardId) {
+
+        if (!wardRepository.existsById(wardId)) {
+            throw new ResourceNotFoundException("Ward Not Found");
+        }
+
+        return citizenRepository.findByWardId(wardId)
+                .stream()
+                .map(CitizenMapper::toDTO)
+                .toList();
+    }
+
+    public CitizenResponseDTO update(Long id, CitizenRequestDTO dto) {
 
         Citizen citizen = citizenRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Citizen Not Found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Citizen Not Found"));
+
+        Ward ward = wardRepository.findById(dto.getWardId())
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Ward Not Found"));
 
         citizen.setFullName(dto.getFullName());
         citizen.setEmail(dto.getEmail());
@@ -55,15 +90,16 @@ public class CitizenService {
         citizen.setGender(dto.getGender());
         citizen.setDateOfBirth(dto.getDateOfBirth());
         citizen.setAddress(dto.getAddress());
-        citizen.setWardNo(dto.getWardNo());
-        citizen.setZone(dto.getZone());
+        citizen.setWard(ward);
 
-        Citizen updatedCitizen = citizenRepository.save(citizen);
-
-        return CitizenMapper.toDTO(updatedCitizen);
+        return CitizenMapper.toDTO(citizenRepository.save(citizen));
     }
 
-    public void deleteCitizen(Long id) {
+    public void delete(Long id) {
+
+        if (!citizenRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Citizen Not Found");
+        }
 
         citizenRepository.deleteById(id);
     }
